# kursov-4

./: README.md  pyproject.toml  settings.py
src/: base_api.py  errors.py  headhunter_api.py  main.py  read_vacancy.py  superjob_api.py  utils.py  vacancy.py  vacancy_api.py  write_vacancy.py
